# AutoLaudoNCCP

./: DEFs.py  DEFs_SAEP.py  Inicial.py  pyproject.toml  pyproject.toml.toml  requiremets.txt  service_account.json
pages/: 0_Resumo.py  2_Controle.py  3_Estatisticas.py  4_ImportacaoSAEP.py  5_GeraLaudo.py
