[project]
name = "autolaudonccp"
version = "0.1.0"
requires-python = ">=3.13,<3.14"

dependencies = [
  "streamlit>=1.31",
  "pandas>=2.2",
  "google-auth>=2.29.0",
  "google-auth-oauthlib>=1.2.0",
  "google-auth-httplib2>=0.2.0",
  "google-api-python-client>=2.118.0",
  "gspread>=6.1.2",
  "python-docx>=1.1.0"
]

[tool.poetry]
package-mode = false
